--- a/app/templates/dasboard/drivers.hbs
+++ b/app/templates/dasboard/drivers.hbs
@@ -1,21 +1,27 @@
 <div class="col-md-6 col-md-offset-3">
 	<div class="panel panel-default">
 	 	<div class="panel-heading">
-	    	<h3 class="panel-title text-center">Driver</h3>
+	    	<h3 class="panel-title text-center">Drivers</h3>
 		</div>
 	  	<div class="panel-body">
 	  		<div class="container-fluid">
-	    	{{#each model as |driver|}}
-	    		<div class="row">
-	    			<h5 class="col-md-8">
-	    				{{#link-to 'dashboard.drivers.view' driver.id}}
-							{{driver.fullName}}
-						{{/link-to}}
-					</h5>
-					{{#link-to 'dashboard.drivers.view.edit' driver.id}}<i class="fa fa-pencil float-right col-md-2"></i>{{/link-to}}
-					<i {{action 'destroy' driver}}class="fa fa-trash float-right right-padding col-md-2"></i>
-	    		</div>
-			{{/each}}
+	  		{{#if model}}
+		    	{{#each model as |driver|}}
+		    		<div class="row">
+		    			<h5 class="col-md-8">
+		    				{{#link-to 'dashboard.drivers.view' driver.id}}
+								{{driver.fullName}}
+							{{/link-to}}
+						</h5>
+						{{#link-to 'dashboard.drivers.view.edit' driver.id}}<i class="fa fa-pencil float-right col-md-2"></i>{{/link-to}}
+						<i {{action 'destroy' driver}}class="fa fa-trash float-right right-padding col-md-2"></i>
+		    		</div>
+				{{/each}}
+			{{else}}
+				<div class="text-center valign-middle text-gray-light no-data">
+					No drivers to show
+				</div>
+			{{/if}}
 			</div>
 		</div>
 		<div class="panel-footer text-center">
