--- a/app/templates/dasboard/drivers/add.hbs
+++ b/app/templates/dasboard/drivers/add.hbs
@@ -9,6 +9,7 @@
 		    {{input type="text" class="form-control" placeholder="Last Name" value=lastName}}
 		</div>
 		<div class="form-group">
+			<button {{action 'goBack'}} class="btn btn-default">Cancel</button>
 			<button {{action 'add'}} type="submit" class="btn btn-success">Submit</button>
 		</div>
 	</form>
