--- a/app/templates/dasboard/drivers/view.hbs
+++ b/app/templates/dasboard/drivers/view.hbs
@@ -1,10 +1,15 @@
 <div class="col-md-6 col-md-offset-3">
 	<div class="panel panel-default">
 	 	<div class="panel-heading">
-	    	<h3 class="panel-title text-center">Driver: {{model.fullName}}</h3>
+	    	<h3 class="panel-title text-center">{{model.fullName}}</h3>
 		</div>
 	  	<div class="panel-body">
-	    	<h4>All the information of driver</h4>
+	    	<h4 class="text-center">Schedule</h4>
+	    	<ul>
+		    	{{#each driverSchedule as |day|}}
+		    		<li>{{day.day}}</li>
+		    	{{/each}}
+		    </ul>
 		</div>
 		<div class="panel-footer text-center">
 	   		{{#link-to 'dashboard.drivers'}}Go Back{{/link-to}}
