--- a/app/templates/dasboard/vehicles.hbs
+++ b/app/templates/dasboard/vehicles.hbs
@@ -1,1 +1,34 @@
-<h1>Vehicles</h1>
+<div class="col-md-6 col-md-offset-3">
+	<div class="panel panel-default">
+	 	<div class="panel-heading">
+	    	<h3 class="panel-title text-center">Vehicles</h3>
+		</div>
+	  	<div class="panel-body">
+	  		<div class="container-fluid">
+		  		{{#if model}}
+			    	{{#each model as |vehicle|}}
+			    		<div class="row">
+			    			<h5 class="col-md-8">
+			    				{{#link-to 'dashboard.vehicles.view' vehicle.id}}
+									{{vehicle.make}}
+								{{/link-to}}
+							</h5>
+							{{#link-to 'dashboard.vehicles.view.edit' vehicle.id}}<i class="fa fa-pencil float-right col-md-2"></i>{{/link-to}}
+							<i {{action 'destroy' vehicle}}class="fa fa-trash float-right right-padding col-md-2"></i>
+			    		</div>
+					{{/each}}
+				{{else}}
+					<div class="text-center valign-middle text-gray-light no-data">
+							No vehicles to show
+					</div>
+				{{/if}}
+			</div>
+		</div>
+		<div class="panel-footer text-center">
+	   		{{#link-to 'dashboard.vehicles.add'}}
+	   			<i class="fa fa-plus"></i>
+	   			&nbsp;Add Vehicle
+   			{{/link-to}}
+		</div>
+	</div>
+</div>
