filtered vehicles in add schedule added styling

--- a/app/templates/dasboard/schedules.hbs
+++ b/app/templates/dasboard/schedules.hbs
@@ -1,28 +1,32 @@
-<div class="col-md-6 col-md-offset-3">
-	<div class="panel panel-default">
-	 	<div class="panel-heading">
-	    	<h3 class="panel-title text-center">Week</h3>
-		</div>
-	  	<div class="panel-body">
-	  		<div class="container-fluid">
-	    	{{#each model as |weekDay|}}
-	    		<div class="row">
-	    			<h5 class="col-md-8">
-	    				{{#link-to 'dashboard.schedules.view' weekDay.id}}
-							{{weekDay.day}}
-						{{/link-to}}
-					</h5>
-					{{#link-to 'dashboard.schedules.view.edit' weekDay.id}}<i class="fa fa-pencil float-right col-md-2"></i>{{/link-to}}
-					<i {{action 'destroy' vehicle}}class="fa fa-trash float-right right-padding col-md-2"></i>
-	    		</div>
-			{{/each}}
+<div class="col-md-12">
+	<div class="container-fluid">
+		{{#each sortedDays as |day|}}
+			<div class="col-md-3 border">
+				<h5 class="text-center">{{day.day}}</h5>
+				<hr>
+				<div class="week">
+					{{#each day.drivers as |driver|}}
+						<label>Driver: </label>
+						{{driver.firstName}} {{driver.lastName}}
+						<br>
+						<br>
+					{{/each}}
+				</div>
+				<div class="week float-right">
+					{{#each day.vehicles as |vehicle|}}
+					<label>Vehicle: </label>
+						{{vehicle.model}}
+						<br>
+						<br>
+					{{/each}}
+				</div>
 			</div>
-		</div>
-		<div class="panel-footer text-center">
-	   		{{#link-to 'dashboard.schedules.add'}}
-	   			<i class="fa fa-plus"></i>
-	   			&nbsp;Add a day of the week
-   			{{/link-to}}
-		</div>
+		{{/each}}
+	</div>
+	<div class="col-md-2 col-md-offset-5 top-buffer">
+		{{#link-to 'dashboard.schedules.add'}}
+			<i class="fa fa-plus"></i>
+			&nbsp;Add a day of the week
+		{{/link-to}}
 	</div>
 </div>
