--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,3 +15,19 @@
 	padding: 100px;
 	background-color: #f2f4f5 ;
 }
+
+.border {
+	border: 1px solid black;
+}
+
+.bottom-border {
+	border-bottom: 1px solid black;
+}
+
+.week {
+	display: inline-block;
+}
+
+.top-buffer {
+	margin-top: 20px;
+}
