--- a/app/templates/dasboard/drivers/add.hbs
+++ b/app/templates/dasboard/drivers/add.hbs
@@ -1,14 +1,14 @@
 <div class="col-md-5 col-md-offset-3">
 	<form class="form-horizontal">
-		<div class="form-group">
+		<div class="form-group has-feedback">
 		    <label>First Name</label>
 		    {{input type="text" class="form-control" placeholder="First Name" value=firstName}}
 		    {{validation-feedback errors=errors.firstName validated=validated}}
 		</div>
-		<div class="form-group">
+		<div class="form-group has-feedback">
 		    <label>Last Name</label>
 		    {{input type="text" class="form-control" placeholder="Last Name" value=lastName}}
-		    {{errors.lastName}}
+		    {{validation-feedback errors=errors.lastName validated=validated}}
 		</div>
 		<div class="form-group">
 			<button {{action 'goBack'}} class="btn btn-default">Cancel</button>
